force-app/main/default/objects/cdcpc__RD_Integral_BDI_Part_Number__c/fields/cdcpc__BTC__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__BTC__c</fullName>
    <label>BTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>