force-app/main/default/objects/cdcpc__RD_Integral_BDI_Part_Number__c/fields/cdcpc__EndConnection__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__EndConnection__c</fullName>
    <label>EndConnection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>