force-app/main/default/objects/cdcpc__RD_Integral_BDI_Part_Number__c/fields/cdcpc__OrderDesc1__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__OrderDesc1__c</fullName>
    <label>OrderDesc1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>