force-app/main/default/objects/cdcpc__RD_Integral_BDI_Part_Number__c/fields/cdcpc__ROP__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ROP__c</fullName>
    <label>ROP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>