force-app/main/default/objects/cdcpc__RD_Integral_BDI_Part_Number__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__PTC__c</columns>
    <columns>cdcpc__SZC__c</columns>
    <columns>cdcpc__BTC__c</columns>
    <columns>cdcpc__CableLength__c</columns>
    <columns>cdcpc__EndConnection__c</columns>
    <columns>cdcpc__GasketMatlCode__c</columns>
    <columns>cdcpc__Interface__c</columns>
    <columns>cdcpc__Seal_Thickness__c</columns>
    <columns>cdcpc__StripMatlCode__c</columns>
    <columns>cdcpc__WireType__c</columns>
    <columns>cdcpc__ModulePN__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>